# UnibotColorBot1

./: README.md  StartUnibot.bat  config.ini  test_virtual_env.py
native_plugin/: CMakeLists.txt  MIGRATION_STATUS.md
native_plugin/include/: Config.h  PluginApi.h  Status.h
native_plugin/src/: AimController.cpp  AimController.h  Config.cpp  DllMain.cpp  Engine.cpp  Engine.h  ImageProcessing.cpp  ImageProcessing.h  ImageTypes.h  OutputScheduler.cpp  OutputScheduler.h  PluginApi.cpp  TargetTypes.h
native_plugin/tests/: MovementTests.cpp  VisionTests.cpp
src/: aim_output.py  cheats.py  configReader.py  screen.py  unibot.py  utils.py
src/mouse/: microcontroller_serial_mouse.py
tools/: final_aim_sim.py  movement_stress_lab.py  vision_stress_lab.py  vision_tune.py
tools/Auto_aim-main/: InputSimulator.hpp  README.md  main.cpp
